<resources>
    <string name="app_name">Saturday Ads</string>
    <string name="your_location">Your location is verified</string>
    <string name="please_fill">Please fill the field</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="please_fill_all">Please fill all the fields</string>
    <string name="add_your_stuff">Add Your Stuff</string>
    <string name="image_uploaded">image uploaded</string>
    <string name="of">of</string>
    <string name="more_items_from">More items from</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="describe_your_listing">Describe your listing</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="please_upload_image">Please upload atleast one image</string>
    <string name="price">Price</string>
    <string name="selectcategory">Select Category</string>
    <string name="itemcondition">Product Condition</string>
    <string name="set_your_location">Set your location</string>
    <string name="category">Category</string>
    <string name="select_your_category">Select your category</string>
    <string name="location">Location</string>
    <string name="exchangebuy">Exchange to Buy</string>
    <string name="fixedprice">Fixed Price</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="sorry">Sorry !</string>
    <string name="posting_list">Posting your list...</string>
    <string name="successfully_posted">Successfully posted your listing</string>
    <string name="promote_listing">Promote your listing</string>
    <string name="choose_category">Please choose anyone category</string>
    <string name="choose_condition">Please choose your product condition</string>
    <string name="price_should">Price should be greater than zero</string>
    <string name="your_product">Your product added successfully</string>
    <string name="your_product_not">Your product is not added successfully, try after sometimes</string>
    <string name="image_cannot">Image cannot be uploaded, try after sometimes</string>
    <string name="image_uploading">Image Uploading...</string>
    <string name="noItem">No items found</string>
    <string name="noData">No datas found</string>
    <string name="noOrder">No orders found</string>
    <string name="noSales">No sales found</string>
    <string name="noExhanges">No exchanges found</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="please_add_image">Please add atleast one image</string>
    <string name="please_select_images">Please select the images</string>
    <string name="your_device_doesnt_flash">Your device doesn\'t have flash</string>
    <string name="gallery">GALLERY</string>
    <string name="next">NEXT</string>
    <string name="categories">Categories</string>
    <string name="changepassword">Change password</string>
    <string name="currentpassword">Current password</string>
    <string name="newpassword">New password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="wrongpassword">Wrong Password</string>
    <string name="passwordmismatched">Password mismatched</string>
    <string name="passwordshould">Password should have atleast 6 characters</string>
    <string name="youroldandnew">Your oldpassword and newpassword are same, please enter a different one!</string>
    <string name="symbols_not_supported">Sorry!, These symbols are not supported!</string>
    <string name="is_typing">is typing...</string>
    <string name="please_enter_message">Please enter your message</string>
    <string name="writemessage">Write a message</string>
    <string name="send">Send</string>
    <string name="comments">Comments</string>
    <string name="addcomments">Add Comments</string>
    <string name="nocomments">No more comments to show</string>
    <string name="please_give_comments">Please give some comments</string>
    <string name="exchangetobuy">Exchange To Buy</string>
    <string name="create">Create</string>
    <string name="please_select_exchange">Please select one item to create an exchange</string>
    <string name="create_promotion">Create Promotion</string>
    <string name="urgent">Must Sell</string>
    <string name="advertisement">Boost</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="back_to_sale">Back to sale</string>
    <string name="promote_your_product">Promote your product</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="delete_product">Delete Product</string>
    <string name="mark_as_sold">Mark as Sold</string>
    <string name="create_exchange">Create Exchange</string>
    <string name="undo_report">Undo Report</string>
    <string name="report_product">Report Product</string>
    <string name="somethingwrong">Something went to be wrong</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reallySignOut">Do you really want to SignOut\u003F</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change">Change</string>
    <string name="your_changes_saved">Your changes have been saved!</string>
    <string name="Edit">Edit</string>
    <string name="Name">NAME</string>
    <string name="Username">USERNAME</string>
    <string name="Password">PASSWORD</string>
    <string name="Email">EMAIL</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="Phone">PHONE</string>
    <string name="link_your_account">Link your account</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="take">Take</string>
    <string name="retake">Retake</string>
    <string name="use_photo">Use Photo</string>
    <string name="please_take_snap">Please take a snap</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="myexchange">My Exchanges</string>
    <string name="exchange_status_chngd">Exchange status changed successfully</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="gps_notenabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="reallyExit">Do you really want to exit?</string>
    <string name="exit">Exit</string>
    <string name="keep">Keep</string>
    <string name="your_not_logged">You\'re not logged in</string>
    <string name="login">Login</string>
    <string name="sell_your_stuff">Sell Your Stuff</string>
    <string name="chat">Chat</string>
    <string name="myprofile">My profile</string>
    <string name="help">Help</string>
    <string name="remove_location">Remove Location</string>
    <string name="set_location">Set Location</string>
    <string name="please_verify_mail">Please verify your mail id</string>
    <string name="please_type_mail">Please Type Your Email</string>
    <string name="please_type_password">Please Type your Password</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forgot password ?</string>
    <string name="or">or</string>
    <string name="signup_not_member">Not a member yet? Sign up</string>
    <string name="messages">Messages</string>
    <string name="noMessage">No Message to be Displayed</string>
    <string name="my_promotions">My Promotions</string>
    <string name="expired">Expired</string>
    <string name="notifications">Notifications</string>
    <string name="noNotification">No Notification to be Displayed</string>
    <string name="profile_problem">Sorry, Something went to be wrong. The problem may while getting the user data, or either admin may disable the user, So you can\'t view this profile right now, Please try after sometimes</string>
    <string name="my_listing">My Listing</string>
    <string name="liked">Liked</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="pay_and_promote">Pay and Promote</string>
    <string name="please_select_promotion">Please select the promotion, you like to pay for</string>
    <string name="payment_error">Sorry, Payment gateway server is not working now, please try again later!</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>
    <string name="checkconnection">Check your network connection and try again</string>
    <string name="alert">Alert!</string>
    <string name="ads_instant_viewable">To make your ads instantly viewable you can go for </string>
    <string name="urgent_ads_highlighted">Must Sell ads, which gets highlighted </string>
    <string name="at_top_just">at the top just for</string>
    <string name="pay_and_highlight">Pay and Highlight</string>
    <string name="Promotion_type">PROMOTION TYPE</string>
    <string name="Paid_amount">PAID AMOUNT</string>
    <string name="Transaction_id">TRANSACTION ID</string>
    <string name="up_to">UP TO</string>
    <string name="Status">STATUS</string>
    <string name="repromote_your_list">Repromote your list</string>
    <string name="register">Sign up</string>
    <string name="fullname">Full name</string>
    <string name="username">User name</string>
    <string name="already_member_login">Already a member? Login</string>
    <string name="filter">Filter</string>
    <string name="category_problem">Problem occured while retrieving category</string>
    <string name="Location">LOCATION</string>
    <string name="change_location">Change Location</string>
    <string name="Distance">DISTANCE</string>
    <string name="Categories">CATEGORIES</string>
    <string name="Posted_within">POSTED WITHIN</string>
    <string name="Sort_by">SORT BY</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="startmaking">The Plain &amp; Simple Geo Marketplace \n Connect with Sellers and Buyers around you or around the Globe</string>
    <string name="search">Search</string>
    <string name="addcomment">Add your comments</string>
    <string name="signup">Sign up</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="network_error">Network Error!</string>
    <string name="network_error_des">Please make sure that you are connected to the internet</string>
    <string name="go_settings">Go to Settings</string>
    <string name="world_wide">World Wide</string>
    <string name="promotion_details">Promotion Details</string>
    <string name="back_sale_confirmation">Are you sure want to change product to sale?</string>
    <string name="sold_product_confirmation">Are you sure you want to mark your product as sold?</string>
    <string name="delete_product_confirmation">Do you want to delete this product?</string>
    <string name="report_product_confirmation">Are you sure you want to report this product?</string>
    <string name="undoreport_product_confirmation">Are you sure you want to undo the report?</string>
    <string name="type_your_offer">Type your offer</string>
    <string name="type_your_message">Type your message</string>
    <string name="offer_should_not_above">Offer price should be less than product price</string>
    <string name="twitter">Twitter</string>
    <string name="googleplus">Google +</string>
    <string name="Passwordfilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.$@#%-*:?!_,&amp;</string>
    <string name="Emailfilter">abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ.@-_</string>
</resources>