<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

  <com.app.external.CustomTextView
      app:font="font_bold.ttf"
      android:id="@+id/alert_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/forgetpassword"
      android:gravity="center"
      android:layout_gravity="center"
      android:padding="10dp"
      android:textColor="@color/primaryText"
      android:textAppearance="@android:style/TextAppearance.Large"/>

  <com.app.external.CustomEditText
      app:font="font_regular.ttf"
      android:id="@+id/alert_msg"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:imeOptions="actionDone"
      android:singleLine="true"
      android:inputType="textEmailAddress"
      android:digits="@string/Emailfilter"
      android:layout_gravity="center"
      android:background="@drawable/editextbg"
      android:padding="10dp"
      android:layout_margin="10dp"
      android:textColor="@color/black"
      android:textAppearance="@android:style/TextAppearance.Medium"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="right"
      android:padding="10dp"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/alert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:gravity="center"
        android:layout_gravity="right"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/alert_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_gravity="right"
        android:textColor="@color/primaryText"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
  </LinearLayout>


</LinearLayout>
