<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    android:orientation="vertical">

    <com.app.external.CustomTextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:font="font_regular.ttf" />
    <!-- <include
         android:id="@+id/actionbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         layout="@layout/actionbar_layout" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/loghead"
                android:layout_width="220dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/app_logo"
                android:gravity="center" />

            <com.app.external.CustomTextView
                android:id="@+id/startmak"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loghead"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/startmaking"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:font="font_regular.ttf" />
            
            <com.app.external.CustomTextView
                android:layout_below="@+id/startmak"
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/blue_round_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:font="font_bold.ttf" />

            <com.app.external.CustomTextView
                android:layout_below="@+id/login"
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/whitetransp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Small"
                app:font="font_bold.ttf" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>